Fix modal width and close button background-clip for safari
We use width 100% instead of 100vw because vw doesn't include the scroll bars which are present in safari causing things to go off screen. Also for whatever reason safari requires the background clip to be directly on the element being clipped... damn safari

--- a/src/templates/ItemPage/ItemPage.scss
+++ b/src/templates/ItemPage/ItemPage.scss
@@ -215,21 +215,28 @@
 [data-reach-dialog-content] {
     position: relative;
     padding: 0 !important;
+    width: 100% !important; // 100vw includes any scrollbars which is bad
+    height: 80%;
+    max-width: 1200px;
 
     .dialog-content {
-        max-height: 80vh;
         padding: 2rem;
         overflow-y: auto;
+        height: 100%;
     }
 
     .close-button {
         position: absolute;
-        right: 20px;
+        right: 10px;
         border: none;
         font-size: 2rem;
         top: 10px;
-        background: linear-gradient(to right, #FFB7B7, #FF7192);
-        background-clip: text;
-        color: transparent;
+        background: inherit;
+
+        > span {
+            background: linear-gradient(to right, #FFB7B7, #FF7192);
+            background-clip: text;
+            color: transparent;
+        }
     }
 }
